Updated cut-off point for text on mobile. Ref Mobile view - drop down and tray issues #394

--- a/src/components/shared/Tray/TrayComponents/AutoComplete/SelectedServiceHeader/SelectedServiceHeader.module.scss
+++ b/src/components/shared/Tray/TrayComponents/AutoComplete/SelectedServiceHeader/SelectedServiceHeader.module.scss
@@ -18,7 +18,7 @@
   margin-top: $size-md;
   width: 100%;
 
-  @media all and (min-width: 400px) {
+  @media all and (min-width: 360px) {
     max-width: calc(100% - (115px));
     margin-top: 0;
     margin-right: $size-md;
